# rulebound

./: .gitignore  .gitleaks.toml  .tool-versions  AGENTS.md  CLAUDE.md  LICENSE  README.md  audit-ci.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  dependency-scan.yml  pages.yml  rulebound-self.yml  sdk-parity.yml
.rulebound/: config.json
apps/web/: .env.example  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  proxy.ts  tsconfig.json  tsconfig.lint.json  vitest.config.mjs
docs/: API_SMOKE_REQUEST_RESPONSES.md  ARCHITECTURE.md  BUGFIX_BOUNDARY_WORKFLOW.md  PHASE_COMPLETION_REPORT.md  PROJECT_ANALYSIS_AND_NEXT_STEPS.md  QA-TEST-PLAN.md  RUNBOOK.md  agent-process-signals.md  amp-91-new.md  analyzer-orchestration.md  bugfix-workflow.md  ci-github-action.md  dashboard-readiness.md  detailed-project-analysis-2026-05-14.md  deterministic-rule-schema.md  docs-policy.md  java-analyzer-pack.md  mcp-setup.md  packaging.md  project-analysis-recommendations.md  quickstart.md  release-gate.md  repair-json-schema.md  report-schema.md  rulebound-vs-coderabbit.md  rulebound-vs-sonarqube.md  scenario-evidence.md  self-healing.md  waivers.md
docs/recipes/: eslint.md  (+7 more)
examples/: waivers.example.yaml
plans/: 2026-03-03-rulebound-enterprise-realtime-enforcement-v1.md
scripts/: build-sdks.sh  check-docs-drift.sh  check-migration-drift.sh  claude-rb.sh  release-gate.sh  rule-lint-gate.sh  secret-scan.sh  smoke-action.sh  smoke-test-cli.sh  test-sdks.sh
sdks/python/: README.md  pyproject.toml
sdks/python/rulebound/: __init__.py  client.py  types.py
sdks/python/tests/: test_client.py
sdks/rust/: Cargo.toml
sdks/rust/src/: lib.rs
sdks/rust/tests/: client_tests.rs
(+260 files in other folders)
