[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rulebound"
version = "0.1.0"
description = "Python SDK for Rulebound — AI coding agent rule enforcement"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["build>=1.2.2", "pytest>=7.0"]
