[package]
name = "rulebound"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Rulebound — AI coding agent rule enforcement"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
